--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
             <version>4.0.0.RELEASE</version>
         </dependency>
         <!--黄丹mybatis-->
+        <!--pom-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+
+                <!-- -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
